src/test/resources/plang-strict/passing/018_character_var.plang
**#Character variables
**Memory:a=Character(a),b=Character(b)
Program testing
  Változók:
    a, b: Karakter

  a := 'b'
  b := a
  a := 'a'
program_vége
