src/test/resources/plang-strict/parse-error/010_typesafe_assignment.plang
**#Typesafe assignments
**FirstErrorLoc:7,5
Program testing
  Változók:
    a: Logikai

  a := 34
program_vége
